--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ body {
   font-weight: 700;
   line-height: 59px;
   letter-spacing: 0.15vw;
-  /* margin-right: 82px; */
 }
 
 .header__logo {
@@ -114,6 +113,10 @@ body {
   text-align: left;
 }
 
+.header__phone-list:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 .header__phone-list:last-child {
   letter-spacing: 0.1vw;
 }
@@ -130,8 +133,9 @@ body {
 }
 
 .section__one-img {
-  max-width: 681px;
+  max-width: 601px;
   margin-bottom: 10px;
+  opacity: 0.8;
 }
 
 .section__one-list {
@@ -160,4 +164,63 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background: rgb(255, 245, 0);
   padding: 25px 54px;
+}
+
+.section__two {}
+
+.section__two-container {
+  margin: 0 auto;
+  padding: 0px 35px;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 93px;
+}
+
+.section__two-header {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 78px;
+  letter-spacing: 0.1vw;
+  margin-bottom: 41px;
+}
+
+.section__two-list {
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 55px;
+}
+
+.section__two-list-item {
+  word-break: break-word;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.1vw;
+  padding: 10px 5px;
+  text-align: center;
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  width: 265px;
+  min-height: 300px;
+}
+
+.img-item1 {
+  background-image: url(/image/food.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+}
+
+.img-item2 {
+  background-image: url(/image/dostavka.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+}
+
+.img-item3 {
+  background-image: url(/image/car_driver.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
 }
