--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,14 @@ body {
 }
 
 .section__one-list-item:not(:last-child) {
-  /* margin-bottom: 59px; */
+  margin-bottom: 59px;
 }
 
 .section__one-list-subitem {
   visibility: hidden;
+  height: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .btn_order {
@@ -190,8 +193,9 @@ body {
 
 .section__two-list {
   width: 100%;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 55px;
+  flex-wrap: wrap;
 }
 
 .section__two-list-item {
@@ -204,8 +208,15 @@ body {
   text-align: center;
   border-radius: 10px;
   background: rgb(255, 255, 255);
-  width: 265px;
+  width: 270px;
   min-height: 300px;
+  align-self: center;
+  margin: auto 10%;
+  margin-bottom: 25px;
+}
+
+.section__two-list-item:nth-child(2n+1) {
+  margin-right: 50px;
 }
 
 .img-item1 {
@@ -224,6 +235,13 @@ body {
 
 .img-item3 {
   background-image: url(/image/car_driver.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+}
+
+.img-item4 {
+  background-image: url(/image/зарядка.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
